-add glyth for Trill \n-add more Tests for Trills \n-add Raphael Tests for Hairpin \n-add Raphael Test for Beam \n-add Raphael Test for Tuplet \n-fixLedgerline Uses

--- a/src/SConstruct
+++ b/src/SConstruct
@@ -52,6 +52,10 @@ vexflow_sources = [
     "stavevolta.js",
     "staverepetition.js",
     "stavesection.js",
+    "stavehairpin.js",
+    "gracenotegroup.js",
+    "trill.js",
+    "tuplet.js",
     ]
 
 Import('dbg opt')
